--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,9 +12,10 @@
     "web:build:stage": "cross-env NODE_ENV=test npx expo export:web",
     "web:build:production": "cross-env NODE_ENV=production npx expo export:web",
     "web:serve": "serve -s web-build",
-    "android:dev": "pnpm run env-dev && expo run:android",
-    "android:stage": "pnpm run env-stage && expo run:android",
-    "android:production": "pnpm run env-production && expo run:android",
+    
+    "android:dev": "pnpm run env-dev && npx expo run:android",
+    "android:stage": "pnpm run env-stage && npx expo run:android",
+    "android:production": "pnpm run env-production && npx expo run:android",
     "android:build-dev": "pnpm run env-dev && npx expo prebuild --platform android && cd android && ./gradlew assembleRelease",
     "android:build-stage": "pnpm run env-stage && npx expo prebuild --platform android && cd android && ./gradlew assembleRelease",
     "android:build-production": "pnpm run env-production && npx expo prebuild --platform android && cd android && gradlew assembleRelease",
@@ -43,7 +44,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-web": "~0.19.11"
+    "react-native-web": "~0.19.11",
+    "expo-build-properties":"^0.12.1"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
