--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,8 +5,8 @@
   "description": "Acme UI components for React Native",
   "author": "Cedric van Putten <me@bycedric.com>",
   "license": "MIT",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "react-native": "./src/index.ts",
   "files": [
     "build",
