--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-
     "web:dev": "npx expo start --web",
     "web:stage": "cross-env NODE_ENV=test npx expo start --web",
     "web:production": "cross-env NODE_ENV=production npx expo start --web",
@@ -12,7 +11,6 @@
     "web:build:stage": "cross-env NODE_ENV=test npx expo export:web",
     "web:build:production": "cross-env NODE_ENV=production npx expo export:web",
     "web:serve": "serve -s web-build",
-    
     "android:dev": "pnpm run env-dev && npx expo run:android",
     "android:stage": "pnpm run env-stage && npx expo run:android",
     "android:production": "pnpm run env-production && npx expo run:android",
@@ -22,8 +20,6 @@
     "env-dev": "cross-env __DEVELOP__=true node ./scripts/generateEnv.js --dev",
     "env-stage": "cross-env node ./scripts/generateEnv.js --stage",
     "env-production": "cross-env node ./scripts/generateEnv.js --production",
-
-    
     "dev": "expo start",
     "lint": "eslint --ext js,ts,tsx .",
     "build": "expo export --output-dir ./build --platform all",
@@ -34,18 +30,20 @@
     "eas-build-post-install": "pnpm run -w build:mobile"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.2.1",
     "components": "workspace:*",
     "core": "workspace:*",
-    "@expo/metro-runtime": "^3.2.1",
     "expo": "^51.0.1",
+    "expo-build-properties": "^0.12.1",
     "expo-dev-client": "~4.0.12",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-web": "~0.19.11",
-    "expo-build-properties":"^0.12.1"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.11"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
