--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "scripts": {
     "lint": "turbo lint",
     "test": "turbo test",
-
     "web:dev": "pnpm -r --filter poolkhoord run web:dev",
     "web:stage": "pnpm -r --filter poolkhoord run web:stage",
     "web:production": "pnpm -r --filter poolkhoord run web:production",
@@ -12,7 +11,6 @@
     "web:build:stage": "pnpm -r --filter poolkhoord run web:build:stage",
     "web:build:production": "pnpm -r --filter poolkhoord run web:build:production",
     "web:serve": "pnpm -r --filter poolkhoord run web:serve",
-
     "android:dev": "pnpm -r --filter poolkhoord run android:dev",
     "android:stage": "pnpm -r --filter poolkhoord run android:stage",
     "android:production": "pnpm -r --filter poolkhoord run android:production",
@@ -21,8 +19,8 @@
     "android:build-production": "pnpm -r --filter poolkhoord run android:build:production"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "cross-env":"^7.0.3"
+    "cross-env": "^7.0.3",
+    "typescript": "^4.9.5"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -38,5 +36,10 @@
     "tabWidth": 2,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack":"^6.9.26",
+    "expo-linking":"^6.3.1"
   }
 }
