--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack":"^6.9.26",
-    "expo-linking":"^6.3.1"
+    "expo-linking":"^6.3.1",
+    "i18next": "^23.7.7",
+    "react-i18next": "^13.5.0"
   }
 }
